--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Scott Wittie</h1>
 
 
-<img src="https://static1.squarespace.com/static/564e84c0e4b059898873484e/56527f44e4b03de1acac1c71/58160493ebbd1a05830e7e52/1477837973051/CwAL4VWVUAAMboo.jpg" alt="Definitely me, doing me things." width="450" height="600">
+<img src="https://i.ytimg.com/vi/7eKv4BEujFU/maxresdefault.jpg" alt="Definitely me, doing me things." width="640" height="360">
 
 <p>Once in an era, while the moon alights to the sky and hangs there heavy, bloated, as though it just ate Taco Bell; a special child is born. This child will through great perserverance and spectacular will, shall come to possess during their life the ability to reshape the world in their own image as a vessel of goodness and light acting on behalf of God itself.</p>
 <p>Through great trials and terrible challenges the child, sometimes grown, will triumph. There surrounded by the ruins of their grand battle with the forces of evil, they will completely fuck it up. I mean seriously drop the ball and allow evil to triumph, utterly failing to live up to their true potential.</p>
