--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </tr>
   </table>
 
-<a href="https://wittie1986.github.io/page2.html"><b>NEXT ----></b></a>
+<a href="https://wittie1986.github.io/page2.html"><h3><b>NEXT ----></b></h3></a>
 
 </body>
 
