--- a/page2.html
+++ b/page2.html
@@ -65,9 +65,10 @@
     <img src="assets\12.png" alt="vapor error snek"></a>
     <br>
     <em>Jesus what the hell is this thing?</em>
+	<hr>
 
 
-<a href="https://wittie1986.github.io/"><b><----BACK</b></a>
+<a href="https://wittie1986.github.io/"><h3><b><----BACK</b></h3></a>
 
 
 
